@@ -2725,8 +2725,9 @@ DRIVER(eatpm,l4)        //          10/89 B Elvira and the Party Monsters (LA-4)
 DRIVER(eatpm,4u)        //          10/89 B Elvira and the Party Monsters (LU-4 Europe)
 DRIVER(eatpm,3g)        //          10/89 B Elvira and the Party Monsters (LG-3 German)
 DRIVER(eatpm,4g)        //          10/89 B Elvira and the Party Monsters (LG-4 German)
-DRIVER(bcats,l2)        //S11-575:  11/89 W Bad Cats (LA-2)
-DRIVER(bcats,g4)        //          11/89 W Bad Cats (LG-4)
+DRIVER(bcats,f1)        //S11-575:  11/89 W Bad Cats (LF-1 French)
+DRIVER(bcats,l2)        //          11/89 W Bad Cats (LA-2)
+DRIVER(bcats,g4)        //          11/89 W Bad Cats (LG-4 German)
 DRIVER(bcats,l5)        //          11/89 W Bad Cats (L-5)
 DRIVER(bcats,tcm)       //          12/23   Bad Cats (The Cat's Meow MOD)
 DRIVER(bcats,tcm12)     //          12/24   Bad Cats (The Cat's Meow MOD 1.2)
